<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".NewUi.Listing.Tambah.TambahVendorListingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TVBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawablePadding="8dp"
                    android:text="@string/TV_Properti"
                    android:textColor="@color/black"
                    app:drawableLeftCompat="@drawable/ic_cancel"
                    app:drawableStartCompat="@drawable/ic_cancel" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="11dp">

                <TextView
                    style="@style/TextAppearance.Material3.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/form_listing_gooproper"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="#000000" />

                <TextView
                    style="@style/TextAppearance.Material3.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/form_tambah_vendor"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="11dp"
                android:paddingEnd="11dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LytNamaVendor"
                    style="@style/CustomOutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="#DBDDDF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EtNamaVendor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et_nama_vendor"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LytNoHpVendor"
                    style="@style/CustomOutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundColor="#DBDDDF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EtNoHpVendor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et_no_hp_vendor"
                        android:inputType="number"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LytNikVendor"
                    style="@style/CustomOutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EtNikVendor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et_nik_vendor"
                        android:inputType="number"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LytAlamatVendor"
                    style="@style/CustomOutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EtAlamatVendor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et_alamat_vendor"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LytTglLahirVendor"
                    style="@style/CustomOutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EtTglLahirVendor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et_tgl_lahir_vendor"
                        android:focusable="false"
                        android:inputType="none"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/LytRekeningVendor"
                        style="@style/CustomOutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/EtRekeningVendor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/et_no_rekening_vendor"
                            android:inputType="number"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/LytBankVendor"
                        style="@style/CustomOutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/EtBankVendor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/et_bank_vendor"
                            android:focusable="false"
                            android:inputType="none"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LytAtasNamaBankVendor"
                    style="@style/CustomOutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EtAtasNamaVendor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et_atas_nama_rekening_vendor"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/BtnUploadKtpVendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/main"
                    android:text="@string/btn_tambahkan_ktp_vendor"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:id="@+id/LytKtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="3">

                    <ImageView
                        android:id="@+id/IVKtp"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/iv_description_upload" />

                    <ImageView
                        android:id="@+id/IVDeleteKtp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:contentDescription="@string/iv_description_delete"
                        android:gravity="center"
                        android:src="@drawable/ic_delete"
                        app:tint="@color/red_color" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>